1.1 version fixed firefox border radius style bug fixed firefox right-navigation header-cropping

--- a/css/layout.css
+++ b/css/layout.css
@@ -560,7 +560,7 @@
   #headerRight
   {
   	text-align: right;
-  	width: 340px;
+  	width: 370px;
   }
   
   table.list > thead > tr > th > a
